# bak

./: README.md  bash_profile  bash_profile.with.conda3  deploy_parameters  dingo-store-one.sh  diskann.cc  diskann.drawio  faiss_flat_delete.drawio  work_queue.drawio
1_my_scripts/: add_vector_flat.sh  add_vector_hnsw.sh  clean_coordinator.sh  clean_store.sh  create_vector_flat.sh  get_index_range_hnsw.sh  show.sh  show_index.sh  show_store.sh  start_index.sh  stop_store.sh
3-vector_index_search/: add_vector_flat_debug-1w.sh  add_vector_flat_debug.sh  add_vector_hnsw_debug-1w.sh  add_vector_hnsw_debug.sh  create_vector_flat.sh  create_vector_hnsw.sh  search_vector_flat_debug_top100.sh  search_vector_flat_debug_vector_ids_100.sh  search_vector_flat_debug_vector_ids_tag1.sh  search_vector_flat_debug_vector_ids_tag2.sh  search_vector_flat_debug_vector_ids_tag3.sh  search_vector_flat_debug_vector_ids_tag4.sh  search_vector_flat_debug_vector_ids_tag5.sh  search_vector_flat_debug_vector_ids_tag6.sh  search_vector_flat_debug_with_scalar_post_filter_tag1.sh  search_vector_flat_debug_with_scalar_post_filter_tag2.sh  search_vector_flat_debug_with_scalar_post_filter_tag3.sh  search_vector_flat_debug_with_scalar_post_filter_tag4.sh  search_vector_flat_debug_with_scalar_post_filter_tag5.sh  search_vector_flat_debug_with_scalar_post_filter_tag6.sh  search_vector_flat_debug_with_scalar_pre_filter_tag1.sh  search_vector_flat_debug_with_scalar_pre_filter_tag2.sh  search_vector_flat_debug_with_scalar_pre_filter_tag3.sh  search_vector_flat_debug_with_scalar_pre_filter_tag4.sh  search_vector_flat_debug_with_scalar_pre_filter_tag5.sh  search_vector_flat_debug_with_scalar_pre_filter_tag6.sh  search_vector_hnsw_debug_top100.sh  search_vector_hnsw_debug_vector_ids_100.sh  search_vector_hnsw_debug_vector_ids_tag1.sh  search_vector_hnsw_debug_vector_ids_tag2.sh  search_vector_hnsw_debug_vector_ids_tag3.sh  search_vector_hnsw_debug_vector_ids_tag4.sh  search_vector_hnsw_debug_vector_ids_tag5.sh  search_vector_hnsw_debug_vector_ids_tag6.sh  search_vector_hnsw_debug_with_scalar_post_filter_tag1.sh  search_vector_hnsw_debug_with_scalar_post_filter_tag2.sh  search_vector_hnsw_debug_with_scalar_post_filter_tag3.sh  search_vector_hnsw_debug_with_scalar_post_filter_tag4.sh  search_vector_hnsw_debug_with_scalar_post_filter_tag5.sh  search_vector_hnsw_debug_with_scalar_post_filter_tag6.sh  (+6 more)
3_my_scripts/: clean.sh  clean_coordinator.sh  clean_diskann.sh  clean_document.sh  clean_index.sh  clean_store.sh  remove.sh  remove_coordinator.sh  remove_coordinator_data.sh  remove_data.sh  remove_document.sh  remove_document_data.sh  remove_index.sh  remove_index_data.sh  remove_store.sh  remove_store_data.sh  show.sh  show_coordinator.sh  show_diskann.sh  show_document.sh  show_index.sh  start_coordinator.sh  start_document.sh  start_index.sh  start_store.sh  stop.sh  stop_diskann.sh
3_scripts/: deploy_parameters
3_scripts_14/: deploy_parameters
3_vector_index/: add_vector_flat.sh  add_vector_flat_another.sh  add_vector_hnsw.sh  add_vector_hnsw_another.sh  client.txt  create_vector_flat.sh  create_vector_hnsw.sh  delete_vector_flat.sh  delete_vector_flat_another.sh  delete_vector_hnsw.sh  delete_vector_hnsw_another.sh  get_index_metrics_hnsw.sh  get_index_range_flat.sh  get_index_range_hnsw.sh  get_max_id_vector_flat.sh  get_min_id_vector_flat.sh  get_min_id_vector_hnsw.sh  get_region_metrics_hnsw.sh  get_region_metrics_hnsw_another.sh  get_store_metrics_flat.sh  get_store_metrics_hnsw.sh  vector_calc_distance_default.sh  vector_calc_distance_default_norm_false.sh  vector_calc_distance_faiss_cosine.sh  vector_calc_distance_faiss_l2.sh  vector_calc_distance_hnsw_cosine.sh  vector_calc_distance_hnsw_l2.sh
3_vector_index_filter/: add_vector_flat_with_scalar.sh  add_vector_hnsw_with_scalar.sh  batch_search_vector_flat_with_scalar_pre_filter.sh  batch_search_vector_hnsw_with_scalar_pre_filter.sh  batch_search_vector_hnsw_with_vector_ids.sh  create_vector_flat_with_scalar.sh  create_vector_hnsw_with_scalar.sh  readme.txt  search_vector_flat_with_scalar_post_filter.sh  search_vector_flat_with_scalar_pre_filter.sh  search_vector_flat_with_vector_ids.sh  search_vector_hnsw_with_scalar_post_filter.sh  search_vector_hnsw_with_scalar_pre_filter.sh  search_vector_hnsw_with_vector_ids.sh
3_vector_index_search/: add_vector_flat_debug-1w.sh  add_vector_flat_debug.sh  add_vector_hnsw_debug-1w.sh  add_vector_hnsw_debug.sh  create_vector_flat.sh  create_vector_hnsw.sh  search_vector_flat_debug_top100.sh  search_vector_flat_debug_vector_ids_100.sh  search_vector_flat_debug_vector_ids_tag1.sh  search_vector_flat_debug_vector_ids_tag2.sh  search_vector_flat_debug_vector_ids_tag3.sh  search_vector_flat_debug_vector_ids_tag4.sh  search_vector_flat_debug_vector_ids_tag5.sh  search_vector_flat_debug_vector_ids_tag6.sh  search_vector_flat_debug_with_scalar_post_filter_tag1.sh  search_vector_flat_debug_with_scalar_post_filter_tag2.sh  search_vector_flat_debug_with_scalar_post_filter_tag3.sh  search_vector_flat_debug_with_scalar_post_filter_tag4.sh  search_vector_flat_debug_with_scalar_post_filter_tag5.sh  search_vector_flat_debug_with_scalar_post_filter_tag6.sh  search_vector_flat_debug_with_scalar_pre_filter_tag1.sh  search_vector_flat_debug_with_scalar_pre_filter_tag2.sh  search_vector_flat_debug_with_scalar_pre_filter_tag3.sh  search_vector_flat_debug_with_scalar_pre_filter_tag4.sh  search_vector_flat_debug_with_scalar_pre_filter_tag5.sh  search_vector_flat_debug_with_scalar_pre_filter_tag6.sh  search_vector_hnsw_debug_top100.sh  search_vector_hnsw_debug_vector_ids_100.sh  search_vector_hnsw_debug_vector_ids_tag1.sh  search_vector_hnsw_debug_vector_ids_tag2.sh  search_vector_hnsw_debug_vector_ids_tag3.sh  search_vector_hnsw_debug_vector_ids_tag4.sh  search_vector_hnsw_debug_vector_ids_tag5.sh  search_vector_hnsw_debug_vector_ids_tag6.sh  search_vector_hnsw_debug_with_scalar_post_filter_tag1.sh  (+11 more)
5_my_scripts/: stop.sh  (+21 more)
dingo-eureka-debug/: CMakeLists.txt
dingo-eureka-debug/braft/: CMakeLists.txt
dingo-eureka-debug/brpc/: CMakeLists.txt
(+525 files in other folders)
